@@ -61,6 +61,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Add new option --iosched to start-stop-daemon to be able to set the
     IO scheduling class and priority. Closes: #443535
     Thanks to Chris Coulson <chrisccoulson@googlemail.com>.
+  * Add tar format detection support to the internal extractor.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
